# Do-It-All

./: Do_It_All.py  README.md  demo.py  demo2.py  main.py  prompts.py  pyproject.toml  requirements.txt
module/: gradio_theme.py  prompts.py  rag_main.py
module/demo2/: demo2.py
