[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "doitall"
version = "0.1.0"
description = "A basic AI Agent system for Python."
authors = [
    { name = "Broadfield Development" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
keywords = ["python", "package", "doitall", "ai", "agent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/broadfield-dev/doitall"
"Issues" = "https://github.com/broadfield-dev/doitall/issues"

[tool.poetry.dependencies]
click = "^7.1.2"
huggingface-hub = "^0.27.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
lxml = "^5.3.0"

[tool.poetry.packages]
include = "doitall"

[tool.poetry.scripts]
doitall = "doitall.main:cli"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
