[build-system]
requires = ["setuptools>=67.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies"]
name = "doitall"
version = "0.1.0"
description = "A basic AI Agent system for Python."
authors = [
    { name = "broadfield-dev" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
keywords = ["python", "package", "doitall", "ai", "agent"]
dependencies = [
  "huggingface-hub==0.27.0",
  "beautifulsoup4==4.12.3",
  "requests==2.32.3",
  "lxml==5.3.0"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/broadfield-dev/doitall"
"Issues" = "https://github.com/broadfield-dev/doitall/issues"

[tool.setuptools.packages.find]
where = ["module"]
